--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ header{
 
 /** END MENU TOP PAGE **/
 
+/** WEB CONTENT **/
 #banner{
     width: 100%;
     height: 600px;
@@ -124,6 +125,33 @@ header{
     background-image: url(media/banner.jpg);
     background-repeat: no-repeat;
 }
+/** END WEB CONTENT **/
+
+/** MEDIA QUERIES **/
+
+/** TABLET SCREENS **/
+@media screen and (min-width: 500px) and (max-width: 999px){
+    .menu{
+        visibility: hidden;
+    }
+    #banner{
+        height: 563px;
+        background-image: url(media/bannerphone.jpg);
+        background-repeat: no-repeat;
+    }
+}
+
+/** ULTRA-WIDE AND 4K SCREENS **/
+@media screen and (min-width: 1921px) and (max-width: 6000px){
+    #banner{
+        height: 1000px;
+    }
+}
+/** END ULTRA-WIDE AND 4K SCREENS **/
+
+/** END MEDIA QUERIES **/
+
+
     
 
 
