--- a/font/style.css
+++ b/font/style.css
@@ -28,25 +28,25 @@ header{
     float: left;
     z-index: 102;
     position: fixed;
-    height: 6.25rem;
+    height: 100px;
     width: 100%;
     background-color: white;
     box-shadow: 0px -100px 200px;
 }
     #logo{ /* LOGO */
-        width: 11.43rem;
-        height: 13rem;
+        width: 11.43em;
+        height: 13em;
 
-        margin-left: 3.5rem;
-        margin-top: 2rem;
+        margin-left: 3.5em;
+        margin-top: 2em;
         
     }
     #home{ /* HOME NAV ICON */
-        width: 2.4rem;
-        height: 2.4rem;
+        width: 2.4em;
+        height: 2.4em;
 
-        margin-left: 18.5rem;
-        margin-top: -13.4rem;
+        margin-left: 18.5em;
+        margin-top: -13.4em;
 
         background: url(svgconception/home.svg) no-repeat;
 
@@ -58,11 +58,11 @@ header{
     #navigation{ /* NAV TOP PAGE */
         display: flex;
         position: absolute;
-        top: 2.2rem;
-        margin-left: 23rem;
+        top: 2.2em;
+        margin-left: 23em;
     }
         .menu{
-            font-size: 1.3rem;
+            font-size: 1.3em;
             font-family: titillium_websemibold;
             color: #7F3996;
 
@@ -72,9 +72,9 @@ header{
             #portfolio::before{
                 content: "";
                 position: absolute;
-                width: 4.95rem;
-                height: 0.15rem;
-                top: 1.45rem;
+                width: 4.95em;
+                height: 0.15em;
+                top: 1.45em;
                 bottom: 0;
                 background-color: #7F3996;
                 opacity: 0;
@@ -87,11 +87,11 @@ header{
             #projet::before{
                 content: "";
                 position: absolute;
-                width: 3.2rem;
-                height: 0.15rem;
-                top: 1.45rem;
+                width: 3.2em;
+                height: 0.15em;
+                top: 1.45em;
                 bottom: 0;
-                left: 8.20rem;
+                left: 8.20em;
                 background-color: #7F3996;
                 opacity: 0;
 
@@ -103,11 +103,11 @@ header{
             #contact::before{
                 content: "";
                 position: absolute;
-                width: 7.2rem;
-                height: 0.15rem;
-                top: 1.45rem;
+                width: 7.2em;
+                height: 0.15em;
+                top: 1.45em;
                 bottom: 0;
-                left: 13.7rem;
+                left: 13.7em;
                 background-color: #7F3996;
                 opacity: 0;
 
@@ -118,16 +118,16 @@ header{
               }
             #linkedin{
                 position: absolute;
-                right: -5rem;
+                right: -3rem;
                 top: -0.5rem;
-                height: 2.4rem;
-                width: 2.4rem;
+                height: 2.4em;
+                width: 2.4;
             }
                 #linkedinlink{
                     position: absolute;
 
-                    height: 2.4rem;
-                    width: 2.4rem;
+                    height: 2.4em;
+                    width: 2.4em;
                     background: url(svgconception/linkedin.svg) no-repeat;
                     background-size: 100%;
                     transition: ease 0.5s;
@@ -142,9 +142,9 @@ header{
 /* WEB CONTENT */
 #banner{
     position: relative;
-    top: 6.25rem ;
+    top: 100px ;
 
-    font-size: 3.5rem;
+    font-size: 3.5em;
     font-family: titillium_websemibold;
     text-align: center;
     color: white;
@@ -152,13 +152,16 @@ header{
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     
     width: 100%;
-    height: 37.5rem;
+    height: 600px;
     background-size: 100%;
     background-image: url(media/banner.jpg);
     background-repeat: no-repeat;
 
     padding-top: 10%;
 }
+    #bannerspan{
+
+    }
 /* END WEB CONTENT */
 
 @media screen and (min-width: 990px) and (max-width: 1249px){
@@ -177,16 +180,16 @@ header{
     /* MENU TOP PAGE */
     header{
         position: fixed;
-        height: 4.0625rem;
-        margin-bottom: 4.0625rem;
+        height: 65px;
+        margin-bottom: 65px;
     }
         /* WEBSITE LOGO */
         #logo{
-        width: 5rem;
-        height: 5.68rem;
+        width: 5em;
+        height: 5.68em;
 
-        margin-left: 2rem;
-        margin-top: 1rem;
+        margin-left: 2em;
+        margin-top: 1em;
         }
         /* MENU NAV ICON */
         #home{
@@ -276,7 +279,7 @@ header{
         font-size: 1.4rem;
 
         position: relative;
-        top: 3.875rem;
+        top: 62px;
         overflow: hidden;
         visibility: visible;
         padding: 15%;
@@ -295,16 +298,16 @@ header{
     /* MENU TOP PAGE */
     header{
         position: fixed;
-        height: 4.0625rem;
-        margin-bottom: 4.0625rem;
+        height: 65px;
+        margin-bottom: 65px;
     }
         /* WEBSITE LOGO */
         #logo{
-        width: 5rem;
-        height: 5.68rem;
+        width: 5em;
+        height: 5.68em;
 
-        margin-left: 2rem;
-        margin-top: 1rem;
+        margin-left: 2em;
+        margin-top: 1em;
         }
         /* MENU NAV ICON */
         #home{
@@ -406,7 +409,7 @@ header{
                                                                 /* ULTRA-WIDE AND 4K SCREENS */
 @media screen and (min-width: 1921px) and (max-width: 6000px){
     #banner{
-        height: 62.5rem;
+        height: 1000px;
     }
 }
 /* END ULTRA-WIDE AND 4K SCREENS */
