--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 }
 
 body{
-    width: 100%;
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
 
@@ -17,7 +16,6 @@ a{
 	color: black;
 	text-decoration: none;
 }
-
 
                                                                 /** END GENERAL WEBSITE SETTINGS **/
                                                                 /* BASIC SCREENS */
@@ -163,6 +161,9 @@ header{
     /* END NAV TOP PAGE */
 /* END MENU TOP PAGE */
 /* WEB CONTENT */
+#auto{
+    width: auto;
+}
 #banner{
     margin-top: 6.25rem ;
 
@@ -172,7 +173,6 @@ header{
     color: white;
 
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    
     width: 100%;
     height: 37.5rem;
     background-size: 100%;
@@ -181,29 +181,36 @@ header{
 
     padding-top: 13%;
 }
+    #banner_span{
+        position: relative;
+    }
 #compétences{
+    position: inherit;
+    margin-top: 20rem;
     display: flex;
-    justify-content: space-evenly;
-
-    margin-top: 5rem;
     font-size: 1.3rem;
     color: blue;
 }
     .compétences_block{
-        display: flex;
+        display: inline;
     }
         .compétences_text{
+            float: right;
             color: #333333;
             width: 16rem;
         }
         .compétences_img{
-            right: 50px;
+            float: left;
+            display: inline-flex;
             height: 12rem;
         }
 /* END WEB CONTENT */
                                                                 /* LAPTOP ADJUST */
 @media screen and (min-width: 990px) and (max-width: 1249px){
-    #bannerspan{
+    #banner{
+        padding-top: 10%;
+    }
+    #banner_span{
         font-size: 2.5rem;
     }
                 #devislink{
@@ -328,17 +335,23 @@ header{
     /* END MENU TOP PAGE */
     /* CONTENT */
     #banner{
-        font-size: 1.8rem;
+        margin-top: 4.0625rem;
 
-        position: relative;
+        font-size: 1.8rem;
         top: 62px;
-        overflow: hidden;
         visibility: visible;
         padding: 18%;
 
         background: url(media/bannerphone.jpg) no-repeat;
         background-size: contain;
     }
+    #compétences{
+        flex-direction: column;
+        align-items: center;
+    }
+        .compétences_block{
+            margin-top: 15%;
+        }
 
 
 
@@ -455,16 +468,17 @@ header{
     /* END MENU TOP PAGE */
     /* CONTENT */
     #banner{
-        font-size: 1.4rem;
-
-        position: relative;
-        top: 3.875rem;
-        overflow: hidden;
+        margin-top: 4.0625rem;
+        font-size: 1.9rem;
         visibility: visible;
         padding-top: 16%;
 
         background: url(media/bannerphone.jpg) no-repeat;
         background-size: contain;
+    }
+    #compétences{
+        flex-direction: column;
+        align-items: center;
     }
 
 
