--- a/style.css
+++ b/style.css
@@ -242,8 +242,23 @@ header{
                 #selfdescription div mark{
                     font-style: bold;
                 }
+    #secondbaseline{
+        width: 100%;
+        height: 26vh;
+        background-image: url(svgconception/secondbaselinebanner.svg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+
+        font-size: 2rem;
+        color: white;
+        text-align: center;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        
+        padding-top: 7vh;
+    }
 
     footer{
+        margin-top: 20vh;
         width: 100%;
         height: 100vh;
         background-color: #161616;
