--- a/style.css
+++ b/style.css
@@ -221,19 +221,26 @@ header{
 
     #selfdescription{        
         display: inline-flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
+        flex-wrap: wrap;
 
         width: 100%;
 
         margin: 10vh 0 10vh 0;
+        padding: 0 15vw 0 15vw;
     }
         #selfdescription div{
             width: 20vw;
+            min-width: 30rem;
             font-size: 1.2rem;
+        }
+        #selfdescription div ~ div{
+            background-color: blue;
         }
             	#selfdescription div h3, #selfdescription div h3 a{
                     font-size: 1.5rem;
                     color: #7f3996;
+                    margin-bottom: 2vh;
                 }
                 #selfdescription div strong, #selfdescription div mark{
                     color: #7f3996;
@@ -243,18 +250,22 @@ header{
                     font-style: bold;
                 }
     #secondbaseline{
-        width: 100%;
-        height: 26vh;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+        height: 11vh;
+
         background-image: url(svgconception/secondbaselinebanner.svg);
         background-repeat: no-repeat;
         background-size: 100%;
+        background-position: 0 50%;
 
-        font-size: 2rem;
-        color: white;
         text-align: center;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        
-        padding-top: 7vh;
+        font-size: 2rem;
+        color: white;
     }
     .compétences_title{
         margin: 8vh 0vh 0vh 0vh;
@@ -265,7 +276,7 @@ header{
         color: #A766BC;
     }
     .compétences{
-        margin: -10vh 0 10vh 0;
+        margin: -10vh 0 0 0;
         padding: 10vh 10vw 10vh 10vw;
         display: flex;
         flex-wrap: wrap;
@@ -280,6 +291,7 @@ header{
             margin: 10vh 0 0 0;
 
             width: 24vw;
+            min-width: 20rem;
             background-color: #7f3996;
             color: white;
 
@@ -297,19 +309,23 @@ header{
                 font-family: titillium_websemibold;
             }
     .soft_title{
-        color: white;
+        color: #f7dfff;
     }
     .soft{
         background-color: #7f3996;
 
     }
+        .soft div{
+            background-color: #A766BC;
+            color: #f7dfff;
+        }
         .soft div:nth-child(odd){
-            background-color: #75328b;
+            background-color: white;
+            color: #7f3996;
         }
     footer{
-        margin-top: 20vh;
-        width: 100%;
-        height: 100vh;
+        width: 100vw;
+        height: 30vh;
         background-color: #161616;
     }
 
@@ -466,6 +482,14 @@ header{
     #compétences{
         margin: 3vh 0 10vh 0;
     }
+    #baseline{
+        font-size: 2rem;
+    }
+    #selfdescription div{
+        width: 30rem;
+        margin: 5vh;
+    }
+
 }
                                                                 /* END TABLET SCREENS */         
                                                                 /* PHONE SCREENS */                                                       /* PHONE SCREENS */
